Align backend API documentation
